--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -69,14 +69,16 @@
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input type="text" class="form-control is-invalid" placeholder="Endereço" autocomplete="off" minlength="5" required [value]="endereco"
+          <input type="text" class="form-control {{ enderecoValido ? 'is-valid' : 'is-invalid' }}"
+          placeholder="Endereço" autocomplete="off" minlength="5" required [value]="endereco"
           #inputEndereco
           (input)="atualizaEndereco(inputEndereco.value)">
           <div class="invalid-feedback">Endereço inválido</div>
         </div>
 
         <div class="form-group col-md-2">
-          <input type="text" class="form-control is-valid" placeholder="Número" autocomplete="off" minlength="1" required [value]="numero"
+          <input type="text" class="form-control {{ numeroValido ? 'is-valid' : 'is-invalid' }}"
+          placeholder="Número" autocomplete="off" minlength="1" required [value]="numero"
           #inputNumero
           (input)="atualizaNumero(inputNumero.value)">
         
@@ -84,7 +86,8 @@
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text" class="form-control" placeholder="Complemento" autocomplete="off" [value]="complemento"
+          <input type="text" class="form-control {{ complementoValido ? 'is-valid' : '' }}"
+          placeholder="Complemento" autocomplete="off" [value]="complemento"
           #inputComplemento
           (input)="atualizaComplemento(inputComplemento.value)">
         </div>
@@ -98,7 +101,7 @@
       <div class="form-row">
           
         <div class="form-group col-md-3">
-          <select class="form-control is-invalid"
+          <select class="form-control {{ formaPagamentoValido ? 'is-valid' : 'is-invalid' }}"
           #selectFormaPagamento
           (change)="atualizaFormaPagamento(selectFormaPagamento.value)"
           >
