--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -69,39 +69,61 @@
       <div class="form-row">
 
         <div class="form-group col-md-6">
-          <input type="text" class="form-control {{ enderecoValido ? 'is-valid' : 'is-invalid' }}"
+          <input type="text" class="form-control {{ enderecoEstadoPrimitivo ? '' : (enderecoValido ? 'is-valid' : 'is-invalid') }}"
           placeholder="Endereço" autocomplete="off" minlength="5" required [value]="endereco"
           #inputEndereco
           (input)="atualizaEndereco(inputEndereco.value)">
-          <div class="invalid-feedback">Endereço inválido</div>
+
+          <div *ngIf="enderecoEstadoPrimitivo == false">
+            <div *ngIf="enderecoValido; else msgEnderecoInvalido">
+              <small class="form-text text-sucess">OK</small>
+            </div>
+            <ng-template #msgEnderecoInvalido>
+              <small class="form-text text-danger">Endereço inválido</small>
+            </ng-template>            
+          </div>
         </div>
 
         <div class="form-group col-md-2">
-          <input type="text" class="form-control {{ numeroValido ? 'is-valid' : 'is-invalid' }}"
+          <input type="number" class="form-control {{ numeroEstadoPrimitivo ? '' : (numeroValido ? 'is-valid' : 'is-invalid') }}"
           placeholder="Número" autocomplete="off" minlength="1" required [value]="numero"
           #inputNumero
           (input)="atualizaNumero(inputNumero.value)">
-        
-          <small class="form-text text-muted">Ok</small>
+
+
+          <div *ngIf="numeroEstadoPrimitivo == false">
+            <div *ngIf="numeroValido; else msgNumeroInvalido">
+              <small class="form-text text-sucess">Ok</small>
+            </div>
+            <ng-template #msgNumeroInvalido>
+              <small class="form-text text-danger">Numéro Inválido</small>
+            </ng-template>
+          </div>
         </div>
 
         <div class="form-group col-md-4">
-          <input type="text" class="form-control {{ complementoValido ? 'is-valid' : '' }}"
+          <input type="text" class="form-control {{ complementoEstadoPrimitivo ? '' : (complementoValido ? 'is-valid' : '') }}"
           placeholder="Complemento" autocomplete="off" [value]="complemento"
           #inputComplemento
           (input)="atualizaComplemento(inputComplemento.value)">
-        </div>
 
+          <div *ngIf="complementoEstadoPrimitivo == false">
+            <div *ngIf="complementoValido">
+              <small class="form-text text-sucess">Ok</small>
+            </div>
+          </div>
+       </div>
       </div>
-      <br />
 
+
+      <br />
       <h5>Dados de pagamento</h5>
       <hr />
 
       <div class="form-row">
           
         <div class="form-group col-md-3">
-          <select class="form-control {{ formaPagamentoValido ? 'is-valid' : 'is-invalid' }}"
+          <select class="form-control {{ formaPagamentoEstadoPrimitivo ? '' : (formaPagamentoValido ? 'is-valid' : 'is-invalid') }}"
           #selectFormaPagamento
           (change)="atualizaFormaPagamento(selectFormaPagamento.value)"
           >
@@ -110,12 +132,19 @@
             <option value="debito" selected="{{ formaPagamento == 'debito' ? 'selected' : ''}}">Débito</option>
           </select>
 
-          <div class="invalid-feedback">Selecione uma forma de pagamento</div>
-        </div>
-      </div>
 
+          <div *ngIf="formaPagamentoEstadoPrimitivo == false">
+            <div *ngIf="formaPagamentoValido; else msgFormaPagamentoInvalido">
+              <small class="form-text text-sucess">Ok</small>
+            </div>
+            <ng-template #msgFormaPagamentoInvalido>
+              <small class="form-text text-danger">Forma de pagamento inválida</small>
+            </ng-template>
+          </div>
+        </div>
+        </div>
       <hr />
-      <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
+      <button type="button" class="btn btn-primary btn-lg" [disabled]="formEstado" (click)="confirmarCompra()">Cofirmar compra</button>
     </form>
   </div>
 </div>
