--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -62,6 +62,8 @@
       </div>
       <br />
 
+      <pre>Válido = {{ formulario.valid | json }}</pre>
+      <pre>Inválido = {{ formulario.invalid | json }}</pre>
       <pre>{{ formulario.value | json }}</pre>
       <h5>Dados de entrega</h5>
       <hr />
@@ -71,29 +73,36 @@
         <div class="form-group col-md-6">
           <input 
             type="text" 
-            class="form-control is-invalid" 
+            class="form-control" 
             placeholder="Endereço" 
             autocomplete="off" 
-            minlength="5" 
-            required
             name="endereco"
+            required
+            minlength="3"
+            maxlength="120"
             ngModel
+            #inputEndereco="ngModel"
           >
-          <small class="form-text text-danger">Endereço inválido</small>
+          
+          <small *ngIf="inputEndereco.valid && inputEndereco.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!inputEndereco.valid && inputEndereco.touched" class="form-text text-danger">Endereço inválido</small>
         </div>
 
         <div class="form-group col-md-2">
           <input 
             type="text" 
-            class="form-control is-valid" 
+            class="form-control" 
             placeholder="Número" 
             autocomplete="off" 
-            minlength="1"
-            required
             name="numero"
+            required
+            minlength="3"
+            maxlength="120"
             ngModel
+            #inputNumero="ngModel"
           >
-          <small class="form-text text-success">Ok</small>
+          <small *ngIf="inputNumero.valid && inputNumero.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!inputNumero.valid && inputNumero.touched" class="form-text text-danger">Número inválido</small>
         </div>
 
         <div class="form-group col-md-4">
@@ -103,6 +112,7 @@
             placeholder="Complemento" 
             autocomplete="off"
             name="complemento"
+            required
             ngModel
           >
         </div>
@@ -117,15 +127,18 @@
           
         <div class="form-group col-md-3">
           <select 
-            class="form-control is-invalid"
+            class="form-control"
             name="formaPagamento"
+            required
             ngModel
+            #selectFormaPagamento="ngModel"
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small class="form-text text-danger">Forma de pagamento inválida</small>
+          <small *ngIf="selectFormaPagamento.valid && selectFormaPagamento.touched" class="form-text text-success">Ok</small>
+          <small *ngIf="!selectFormaPagamento.valid && selectFormaPagamento.touched" class="form-text text-danger">Forma de Pagamento inválido</small>
         </div>
       </div>
 
