--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="ordem-compra">
+  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
     <form novalidate #formulario="ngForm" (ngSubmit)="confirmarCompra(formulario)">
     
       <h5>Sua Compra</h5>
@@ -62,9 +62,6 @@
       </div>
       <br />
 
-      <pre>Válido = {{ formulario.valid | json }}</pre>
-      <pre>Inválido = {{ formulario.invalid | json }}</pre>
-      <pre>{{ formulario.value | json }}</pre>
       <h5>Dados de entrega</h5>
       <hr />
 
@@ -96,8 +93,8 @@
             autocomplete="off" 
             name="numero"
             required
-            minlength="3"
-            maxlength="120"
+            minlength="1"
+            maxlength="20"
             ngModel
             #inputNumero="ngModel"
           >
@@ -149,4 +146,9 @@
       >Cofirmar compra</button>
     </form>
   </div>
+
+  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
+    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
+  </div>
+
 </div>
