--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="ordem-compra" *ngIf="idPedidoCompra === undefined">
-    <form novalidate #formulario="ngForm" (ngSubmit)="confirmarCompra(formulario)">
+  <div class="ordem-compra">
+    <form [formGroup]="formulario" novalidate (ngSubmit)="confirmarCompra()">
     
       <h5>Sua Compra</h5>
       <hr />
@@ -72,17 +72,10 @@
             type="text" 
             class="form-control" 
             placeholder="Endereço" 
-            autocomplete="off" 
-            name="endereco"
-            required
-            minlength="3"
-            maxlength="120"
-            ngModel
-            #inputEndereco="ngModel"
+            autocomplete="off"
+            formControlName="endereco" 
           >
-          
-          <small *ngIf="inputEndereco.valid && inputEndereco.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!inputEndereco.valid && inputEndereco.touched" class="form-text text-danger">Endereço inválido</small>
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-2">
@@ -90,16 +83,10 @@
             type="text" 
             class="form-control" 
             placeholder="Número" 
-            autocomplete="off" 
-            name="numero"
-            required
-            minlength="1"
-            maxlength="20"
-            ngModel
-            #inputNumero="ngModel"
+            autocomplete="off"
+            formControlName="numero" 
           >
-          <small *ngIf="inputNumero.valid && inputNumero.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!inputNumero.valid && inputNumero.touched" class="form-text text-danger">Número inválido</small>
+          <small class="form-text text-success">Ok</small>
         </div>
 
         <div class="form-group col-md-4">
@@ -108,9 +95,7 @@
             class="form-control" 
             placeholder="Complemento" 
             autocomplete="off"
-            name="complemento"
-            required
-            ngModel
+            formControlName="complemento" 
           >
         </div>
 
@@ -125,17 +110,13 @@
         <div class="form-group col-md-3">
           <select 
             class="form-control"
-            name="formaPagamento"
-            required
-            ngModel
-            #selectFormaPagamento="ngModel"
+            formControlName="formaPagamento" 
           >
             <option value="">Selecione uma opção</option>
             <option value="dinheiro">Dinheiro</option>
             <option value="debito">Débito</option>
           </select>
-          <small *ngIf="selectFormaPagamento.valid && selectFormaPagamento.touched" class="form-text text-success">Ok</small>
-          <small *ngIf="!selectFormaPagamento.valid && selectFormaPagamento.touched" class="form-text text-danger">Forma de Pagamento inválido</small>
+          <small class="form-text text-success">Ok</small>
         </div>
       </div>
 
@@ -146,9 +127,4 @@
       >Cofirmar compra</button>
     </form>
   </div>
-
-  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
-    <app-ordem-compra-sucesso [idPedidoCompra]="idPedidoCompra"></app-ordem-compra-sucesso>
-  </div>
-
 </div>
